# FinDocDRAG

./: .env.example  .gitignore  .gitkeep  Makefile  README.ja.md  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
config/: tickers.yml
db/migrations/: 001_initial_schema.sql
docs/: design-decisions.ja.md  design-decisions.md  evaluation-results.ja.md  evaluation-results.md  technical-design-document.ja.md  technical-design-document.md
examples/: README.ja.md  README.md
examples/bruno/: bruno.json
examples/bruno/01-health/: embedding-worker-health.bru  ingestion-health.bru  query-api-health.bru
examples/bruno/02-ingest/: ingest-from-config.bru  ingest-tickers.bru
examples/bruno/03-query/: graceful-degradation.bru  revenue-comparison-msft-aapl.bru  supply-chain-risk-aapl.bru
examples/bruno/04-documents/: list-all-documents.bru  list-documents-by-ticker.bru
examples/bruno/environments/: local.bru
helm/findoc-rag/: Chart.yaml  values.yaml
helm/findoc-rag/dashboards/: findoc-overview.json
helm/findoc-rag/templates/: configmaps.yaml  cronjob-drift-detection.yaml  embedding-worker-deployment.yaml  grafana-dashboards-configmap.yaml  grafana-deployment.yaml  (+11 more)
monitoring/: prometheus.yml
services/embedding-worker/: Dockerfile  requirements-dev.txt  requirements.txt
services/eval/: eval_dataset.json  requirements.txt  run_eval.py
services/ingestion/: Dockerfile  requirements-dev.txt  requirements.txt
services/query-api/: Dockerfile  metrics.py  requirements-dev.txt  requirements.txt
(+47 files in other folders)
