[project]
name = "findoc-rag"
version = "0.1.0"
description = "Financial Document Intelligence Platform — RAG system for SEC filings"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["services/*/src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "confluent_kafka.*",
    "sentence_transformers.*",
    "tiktoken.*",
    "pgvector.*",
    "slowapi.*",
    "ragas.*",
    "prometheus_client.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = [
    "services/ingestion/tests",
    "services/embedding-worker/tests",
    "services/query-api/tests",
]
addopts = "--cov=services --cov-report=term-missing --cov-fail-under=80"